--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ serialport = "4.0.1"
 colored = "2.0.0"
 log = "0.4.14"
 simplelog = "0.10.2"
+rand = "0.8.4"
+structopt = "0.3.23"
+clap = "2.33.3"
+strum = "0.22"
+strum_macros = "0.22"
+
