--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --release --target x86_64-pc-windows-gnu
+    - run: rustup target add x86_64-pc-windows-gnu
+    - run: cargo build --release --target x86_64-pc-windows-gnu
     - name: Run tests
       run: cargo test --verbose
