--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
+    - name: Add Windows Target
     - run: rustup target add x86_64-pc-windows-gnu
+    - name: Build Windows
     - run: cargo build --release --target x86_64-pc-windows-gnu
+    - name: Build Linux
+    - run: cargo build --release
     - name: Run tests
       run: cargo test --verbose
