--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Add Windows Toolchain
-      run: rustup toolchain install stable-x86_64-pc-windows-gnu --force-non-host
+      run: rustup toolchain install stable-x86_64-pc-windows-gnu
     - name: Add Windows Target
       run: rustup target add x86_64-pc-windows-gnu
     - name: Build Windows
