--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,3 +26,19 @@ jobs:
       run: cargo build --release
     - name: Run tests
       run: cargo test --verbose
+      
+  release:
+    needs: build
+    name: "Release"
+    runs-on: "ubuntu-latest"
+
+    steps:
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: false
+          title: "Latest Build"
+          files: |
+            target/x86_64-pc-windows-gnu/release/ace411_sudoku.exe
+            target/x86_64-unknown-linux-gnu/release/ace411_sudoku
