--- a/Makefile.toml
+++ b/Makefile.toml
@@ -2,7 +2,8 @@
 script = [
     "mkdir -p ./out",
     "cp -f ./target/x86_64-pc-windows-gnu/release/ace411_sudoku.exe ./out/",
-    "cp -f ./target/x86_64-unknown-linux-gnu/release/ace411_sudoku ./out/"
+    "cp -f ./target/x86_64-unknown-linux-gnu/release/ace411_sudoku ./out/",
+    "echo 'Binaries Available in ./out Directory'"
 ]
 dependencies = ["linux_rel", "windows_rel"]
 
